<resources>
    <string name="app_name">ChatTogether</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="appName">一起尬聊</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">登录</string>
    <string name="registered">注册</string>
    <string name="registeredAndLogin">注册并登录</string>
    <string name="borth">生日</string>
    <string name="sex">性别</string>
    <string name="title_activity_registered">registeredActivity</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="galiao">尬聊</string>
    <string name="contact">通讯录</string>
    <string name="settings">设置</string>
    <string name="logout">退出</string>
    <string name="change_avatar">更换头像</string>
    <string name="user_name">昵称</string>
    <string name="request_add_friend">请求添加您为好友！</string>
</resources>
