<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="user"
            type="com.example.chattogether.viewmodels.UserViewModel" />
        <variable
            name="registered"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/appName"
            android:textColor="@color/textColorDark"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/account"
            android:textColor="@color/textColorDark"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/account"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/corner_gray_background"
            android:drawablePadding="25dip"
            android:gravity="center"
            android:hint="@string/account"
            android:importantForAutofill="no"
            android:inputType="number"
            android:lines="1"
            android:paddingStart="10dp"
            android:text="@={user.username}"
            android:textColor="@color/textColorDark"
            android:textColorHint="@color/textColorGray"
            app:layout_constraintBottom_toBottomOf="@+id/account_text"
            app:layout_constraintLeft_toRightOf="@+id/account_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/account_text"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textColor="@color/textColorDark"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/corner_gray_background"
            android:drawablePadding="25dip"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingStart="10dp"
            android:text="@={user.password}"
            android:textColor="@color/textColorDark"
            android:textColorHint="@color/textColorGray"
            app:layout_constraintBottom_toBottomOf="@+id/password_text"
            app:layout_constraintLeft_toRightOf="@+id/password_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/password_text"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/user_name"
            android:textColor="@color/textColorDark"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/corner_gray_background"
            android:drawablePadding="25dip"
            android:gravity="center"
            android:hint="@string/user_name"
            android:lines="1"
            android:paddingStart="10dp"
            android:text="@={user.nickname}"
            android:textColor="@color/textColorDark"
            android:textColorHint="@color/textColorGray"
            app:layout_constraintBottom_toBottomOf="@+id/username_text"
            app:layout_constraintLeft_toRightOf="@+id/username_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/username_text"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/borth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/borth"
            android:textColor="@color/textColorDark"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_text" />

        <EditText
            android:id="@+id/borth"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/corner_gray_background"
            android:gravity="center"
            android:hint="@string/borth"
            android:lines="1"
            android:paddingStart="10dp"
            android:textColor="@color/textColorDark"
            android:textColorHint="@color/textColorGray"
            app:layout_constraintBottom_toBottomOf="@+id/borth_text"
            app:layout_constraintLeft_toRightOf="@+id/borth_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/borth_text"
            android:text="@={user.borth}"
            setPicker="@{user}"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/sex_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/sex"
            android:textColor="@color/textColorDark"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/borth_text" />


        <RadioGroup
            app:layout_constraintBottom_toBottomOf="@+id/sex_text"
            app:layout_constraintLeft_toRightOf="@+id/sex_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sex_text"
            android:checkedButton="@={user.sexint.get()}"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="50dp">

            <RadioButton
                android:id="@+id/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:text="@string/man" />

            <RadioButton
                android:layout_marginStart="100dp"
                android:layout_gravity="center"
                android:id="@+id/woman"
                android:text="@string/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <Button
            android:id="@+id/registered_bt"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/corner_gray_background"
            android:gravity="center"
            android:onClick="@{registered}"
            android:text="@string/registeredAndLogin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sex_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>